--- a/ai_2048/app/src/main/AndroidManifest.xml
+++ b/ai_2048/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.lyk.ai_2048">
 
     <application
+        android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
