--- a/ai_2048/app/src/main/AndroidManifest.xml
+++ b/ai_2048/app/src/main/AndroidManifest.xml
@@ -13,13 +13,23 @@
         <activity
             android:name=".main.MainGameActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".main.SettingsActivity"
+            android:label="@string/activity_settings"
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"/>
+
 
     </application>
 
