--- a/ai_2048/app/src/main/AndroidManifest.xml
+++ b/ai_2048/app/src/main/AndroidManifest.xml
@@ -30,6 +30,13 @@
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"/>
 
+        <activity
+            android:name=".main.HelpActivity"
+            android:label="@string/activity_help"
+            android:theme="@style/AppTheme"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"/>
+
 
     </application>
 
