--- a/ai_2048/app/build.gradle
+++ b/ai_2048/app/build.gradle
@@ -38,5 +38,8 @@ dependencies {
     //text typeface
     compile 'com.vstechlab.easyfonts:easyfonts:1.0.0'
 
+    //ad mob
+    compile 'com.google.android.gms:play-services-ads:9.0.2'
+
 
 }
